--- a/CzPlayer/Info.plist
+++ b/CzPlayer/Info.plist
@@ -31,9 +31,14 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Allow always access to your location</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Allow access to your location</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>audio</string>
+		<string>location</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
